[gd_scene format=3 uid="uid://8qiu0t2dx1f4"]

[ext_resource type="Theme" uid="uid://bnr8x3yfeavfk" path="res://Themes/LabelTitles.tres" id="1_4ovuv"]
[ext_resource type="Script" uid="uid://carcr4btbe33k" path="res://Scripts/UI/vr_ramp_properties.gd" id="1_oodm3"]
[ext_resource type="Theme" uid="uid://cguww0cl6anij" path="res://Themes/LabelResults.tres" id="2_oodm3"]

[node name="VRRamp1Properties" type="Control" unique_id=431500401]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_oodm3")

[node name="Panel" type="Panel" parent="." unique_id=1733352739]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 4.0
offset_right = 1115.0
offset_bottom = 612.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=653297106]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 465.0
offset_top = 5.0
offset_right = 677.0
offset_bottom = 94.0
grow_horizontal = 2

[node name="R1TitleLabel" type="Label" parent="VBoxContainer" unique_id=2147324795]
layout_mode = 2
theme = ExtResource("1_4ovuv")
text = "Ramp 1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=1159626260]
layout_mode = 2

[node name="R1Theta1Label" type="Label" parent="VBoxContainer" unique_id=1733365590]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1

[node name="R1Beta1Label" type="Label" parent="VBoxContainer" unique_id=1535731762]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1

[node name="R1MachLabel" type="Label" parent="VBoxContainer" unique_id=1917062567]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1

[node name="R1TempLabel" type="Label" parent="VBoxContainer" unique_id=916013458]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1

[node name="R1PresLabel" type="Label" parent="VBoxContainer" unique_id=98850304]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1

[node name="R1DensLabel" type="Label" parent="VBoxContainer" unique_id=669719461]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1

[node name="R1StagTemp" type="Label" parent="VBoxContainer" unique_id=241195874]
layout_mode = 2

[node name="R1StagPresLabel" type="Label" parent="VBoxContainer" unique_id=102722279]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1

[node name="R1FlowVelLabel" type="Label" parent="VBoxContainer" unique_id=2030114258]
layout_mode = 2
theme = ExtResource("2_oodm3")
horizontal_alignment = 1
