class_name VRRampProperties
extends Control


@onready var theta_1_label : Label = $VBoxContainer/R1Theta1Label
@onready var beta_1_label : Label = $VBoxContainer/R1Beta1Label
@onready var mach_number_label : Label = $VBoxContainer/R1MachLabel
@onready var temperature_label : Label = $VBoxContainer/R1TempLabel
@onready var pressure_label : Label = $VBoxContainer/R1PresLabel
@onready var density_label : Label = $VBoxContainer/R1DensLabel
@onready var stag_temp_label : Label = $VBoxContainer/R1StagTemp
@onready var stag_press_label : Label = $VBoxContainer/R1StagPresLabel
@onready var flow_velocity_label : Label = $VBoxContainer/R1FlowVelLabel
